--- a/ThienNga2/Views/Inventory/Inventory.cshtml
+++ b/ThienNga2/Views/Inventory/Inventory.cshtml
@@ -75,6 +75,19 @@
         setInterval(checkHidden, 100);
 
     </script>
+   <script>
+       $( document ).ready(function() {
+            var temp ="";
+             temp = $("img").attr("src");
+          
+          var elem = document.createElement("img");
+elem.src = temp;
+document.getElementById("content").appendChild(elem);
+
+        });
+   </script>
+   
+
     <style>
          .ui-autocomplete {
              max-height: 100px;
@@ -88,6 +101,9 @@
          * html .ui-autocomplete {
              height: 100px;
          }
+         tr.border_bottom td {
+        border-bottom:0.5pt solid gray;
+}
     </style>
 </head>
 <body>
@@ -173,16 +189,70 @@
             tb_product_detail t = (tb_product_detail)ViewData["productdetail"];
             //String srcImage = t.description.Substring(t.description.IndexOf("<img>") + 4, t.description.IndexOf("</img>"));
 
-            <table class="responstable">
-
-              <td>
-                    <p>Name: @t.productName</p>
-                    <p>Factory Code: @t.producFactoryID</p>
-                    <p>Store Code: @t.productStoreID</p>
-                    <p>Giá: @t.price VND</p>
-                </td>
+            <table align="center">
+                <tr class="border_bottom">
 
 
+                    <td colspan="2" align="left">
+                        <h6> @t.productName</h6>
+                        
+                    </td>
+                    <td rowspan="1">
+                       
+                    </td>
+                    <td rowspan="5">
+                        <div id="content">
+                          
+                        </div>
+                        
+                    </td>
+                </tr>
+                <tr class="border_bottom">
+                    <td align="left">
+                        Mã nhà máy
+                 
+                    </td>
+                    <td align="right">
+                        @t.producFactoryID
+                      
+          
+                    </td>
+                    <td>
+
+                    </td>
+                </tr>
+                <tr class="border_bottom">
+                    <td align="left">
+                      
+                        SKU
+          
+                    </td>
+                    <td align="right">
+                        @t.productStoreID
+                    </td>
+                    <td></td>
+                </tr>
+                <tr class="border_bottom">
+                    <td align="left">
+              
+                        Giá bán
+                    </td>
+                    <td align="right">
+                        @t.price VND
+                    </td>
+                    <td></td>
+                </tr>
+                <tr class="border_bottom">
+                    <td align="left">
+                        Số lượng
+                    </td>
+                    <td align="right">
+                        <div> Hiện có @t.price VND</div> <br>
+                        <div>Số hàng đang về 20</div> <br>
+                        <div>Dự kiến 20/8/2016</div> <br>
+                    </td>
+                    <td></td>
+                </tr>
             </table>
 
 
@@ -375,7 +445,7 @@
             <h1> Thông tin mô tả sản phẩm</h1>
             tb_product_detail t = (tb_product_detail)ViewData["productdetail"];
 
-            <div>
+            <div id="myDescription">
         
              @Html.Raw(t.description)
                
