--- a/ThienNga2/Views/KickHoatBaoHanh/index.cshtml
+++ b/ThienNga2/Views/KickHoatBaoHanh/index.cshtml
@@ -59,7 +59,7 @@
                     <tr>
                         <td>
                             <br />Tìm theo
-                            <input type="radio" name="searchType" value="masp"> Mã sản pẩm
+                            <input type="radio" name="searchType" checked="checked"  value="masp"> Mã sản pẩm
                             <input type="radio" name="searchType" value="date"> Ngày 
                             <input type="radio" name="searchType" value="sdt"> SĐT
                             <input type="radio" name="searchType" value="sku"> SKU
