--- a/ThienNga2/Views/ProductItem/NewProductItem.cshtml
+++ b/ThienNga2/Views/ProductItem/NewProductItem.cshtml
@@ -66,13 +66,20 @@
              
                 $.each(result, function (name, value) {
                     if (name == "name") {
-                        flag = true;
-                        if(value != null) 
+                        flag = true;                                                                 
                         $('#items_' + (index - 1) + '__SKU').css("background-color", "green");
+                        $('#items_' + (index - 1) + '__SKU').css("color", "white");
+                        if (value != null) {
+                          
+                                $("#lid" + (index - 1)).empty();
+                                $("#lid" + (index - 1)).append(value);
+                            }
+                        
+                        
                     }
                     if (name == "price") {
                         if (flag && value!= null) {
-                   
+                            $("#pid" + (index - 1)).text(numberWithCommas(value));
                             $('#items_' + (index - 1) + '__DonGiaS').val(numberWithCommas(value));
                         }
                     }
@@ -140,9 +147,11 @@
                 <table class="responstable">
                     <label>Lấy từ kho @Html.DropDownListFor(Model => Model.inventoryID, ls2)</label>
                     @for (var i = 0; i < Model.items.Count; i++)
-                {
-                    string idd = "divid" + i;
-                    string thanhtienID = "thanhtien" + idd;
+                    {
+                        string idd = "divid" + i;
+                        string idp = "pid" + i;
+                        string idl = "lid" + i;
+                        string thanhtienID = "thanhtien" + idd;
                         @*<div class="inner-wrap" id="@idd">*@
                             <tr id="@idd">
                                 <td >
@@ -150,8 +159,13 @@
                                 </td>
                                 <td>
 
-                                    <label>Đợn giá @Html.TextBoxFor(Model => Model.items[i].DonGiaS, new { @class = "form-control", value = "0" })</label>
+                                    <label>Tên Sản phẩm  <label id="@idl"></label> </label>
                                 </td>
+                                <td>
+                                    @Html.HiddenFor(Model => Model.items[i].DonGiaS, new { @class = "form-control", value = "0" })
+                                    <label>Đợn giá <label id="@idp"></label> </label>
+                                </td>
+
                                 <td>
                                  
                                     <label>Số lượng @Html.TextBoxFor(Model => Model.items[i].quantity, new { @class = "form-control", value = "1" })</label>
