--- a/ThienNga2/Views/ProductItem/NewProductItem.cshtml
+++ b/ThienNga2/Views/ProductItem/NewProductItem.cshtml
@@ -86,7 +86,8 @@
                 })
             });
             if (!flag) {
-                $('#items_' + (index - 1) + '__SKU').css("background-color", "red");
+                $('#items_' + (index - 1) + '__SKU').css("background-color", "orange");
+                $('#items_' + (index - 1) + '__SKU').css("color", "white");
             }
         };
         $(document).ready(function () {
